[package]
name = "tuitunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = {version = "3.1.6", features = ["derive"]}
crossterm = "0.23.1"
rodio = "0.15"
spectrum-analyzer = "1.2.4"
tui = "0.17.0"
